fixed bug when there are gaps in the walls

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,24 +1,30 @@
 .screen{
     position: relative;
     height: 100vh;
-    margin-top: 5rem;
 }
 .ground{
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 0;
     z-index: -1;
-    height: 80vh;
+    height: 50vh;
     background-color: gray;
     width: 100vw;
+    display: flex;
+    align-items: baseline;
 }
 
 .canvas{
     display: flex;
     align-items:center;
-    height: 50%;
+    height: 100%;
 }
 .bar{
     width: 1.11vw ;
     /* border: .5px dashed rgb(0, 0, 0); */
+}
+.empty{
+    width: 1.11vw;
+    height: 100vh;
+    background-color: transparent;
 }
